@@ -4125,12 +4125,14 @@ INLINE long   sturm(GEN x);
 INLINE GEN    truecoeff(GEN x, long n);
 INLINE GEN    trunc_safe(GEN x);
 INLINE GEN    vec_ei(long n, long i);
+INLINE GEN    vec_append(GEN v, GEN s);
 INLINE GEN    vec_lengthen(GEN v, long n);
 INLINE GEN    vec_setconst(GEN v, GEN x);
 INLINE GEN    vec_shorten(GEN v, long n);
 INLINE GEN    vec_to_vecsmall(GEN z);
 INLINE GEN    vecpermute(GEN A, GEN p);
 INLINE GEN    vecreverse(GEN A);
+INLINE GEN    vecsmallpermute(GEN A, GEN p);
 INLINE GEN    vecslice(GEN A, long y1, long y2);
 INLINE GEN    vecslicepermute(GEN A, GEN p, long y1, long y2);
 INLINE GEN    vecsplice(GEN a, long j);
