@@ -46,6 +46,7 @@ LGr13- GP function polrootsreal
 HIL17- GP functions ellisogeny, ellisogenyapply
    18- [libpari] New function RgX_coeff
 BA 19- [libpari] New functions Fl_halve, Fp_halve, Flx_halve, Fq_halve
+BA 20- [libpari] New functions vecsmallpermute, vec_append
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
